--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lottie-react": "^2.3.1",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
