--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^4.7.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "emailjs-com": "^3.2.0",
     "lottie-react": "^2.3.1",
     "next": "12.2.5",
     "react": "18.2.0",
