--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "18.7.9",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "typescript": "4.7.4"
